--- a/configs/user_config.yml
+++ b/configs/user_config.yml
@@ -1,6 +1,11 @@
 dmx_devices:
   - alias: DMX1
     path: "/dev/ttyUSB0"
+    universe: 
+    -  initial_index: 0 
+       value: 100 
+    -  initial_index: 5
+       value: 20
 artnet_devices:
   - alias: Artnet1
     ip: "127.0.0.1"
