--- a/configs/user_config.yml
+++ b/configs/user_config.yml
@@ -1,22 +1,10 @@
 dmx_devices:
   - alias: DMX1
-    path: "/dev/ttyUSB0"
-    universe: 
-    -  initial_index: 0 
-       value: 100 
-    -  initial_index: 5
-       value: 20
+    path: "COM1"
     scenes:   
 artnet_devices:
   - alias: Artnet1
     ip: "127.0.0.1"
-    universe: 
-    -  initial_index: 0 
-       value: 100 
-    -  initial_index: 10
-       value: 20
-    -  initial_index: 11
-       value: 0
     scenes:
     - scene_alias: "scene 1"
       channel_map:
